@@ -50,5 +50,14 @@ if ($] >= 5.018) {
 END
 }
 
+if ($] >= 5.021005) {
+	is (eval <<'END', 1, 'lvalue ref compiles') or diag $@;
+	use experimental 'lvalue_refs';
+	\@a = \@b;
+	is(\@a, \@b, '@a and @b are the same after \@a=\@b');
+	1;
+END
+}
+
 done_testing;
 
