@@ -1,6 +1,7 @@
 Revision history for experimental
 
 {{$NEXT}}
+          Added lvalue references feature
 
 0.011     2014-09-27 14:08:47+02:00 Europe/Amsterdam
           Clarified which order to apply pragmas [Grant McLean]
